# popmon

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .versionrc.json  ABSTRACT.rst  CHANGELOG.md  CHANGES.rst  CITATION.bib  CITATION.cff  LICENSE  MANIFEST.in  Makefile  NOTICE  README.rst  bump.py  commitlint.config.js  extras.json  index.html  make.bat  package.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  commit.yml  license.yml  pypi.yml  release.yml
docs/: Makefile  README.rst  autogenerate.sh  requirements.txt
docs/source/: code.rst  comparisons.rst  conf.py  configuration.rst  developing.rst  index.rst  introduction.rst  modules.rst  popmon.alerting.rst  popmon.analysis.comparison.rst  popmon.analysis.profiling.rst  popmon.analysis.rst  popmon.base.rst  popmon.decorators.rst  popmon.extensions.rst  popmon.hist.filling.rst  popmon.hist.rst  popmon.io.rst  popmon.pipeline.rst  popmon.rst  popmon.stats.rst  popmon.stitching.rst  popmon.visualization.rst  popmon_index.rst  profiles.rst  readme.rst  reference_types.rst  tree.rst  tutorials.rst
examples/: flight_delays.py  synthetic_data.py
examples/integrations/kibana/: README.md  elastic-kibana.yml  elastic_connector.py  popmon-dashboard.ndjson  popmon_to_elastic.py
examples/synthetic_data_streams/: README.md  circles.py  hyperplane.py  led.py  mixed.py  sea.py  sine1.py  sine2.py  stagger.py  synthetic_data_streams.py
popmon/: __init__.py  config.py  resources.py  utils.py  version.py
popmon/alerting/: __init__.py  alerts_summary.py  compute_tl_bounds.py
popmon/analysis/: __init__.py  apply_func.py  functions.py  hist_numpy.py  merge_statistics.py
popmon/analysis/comparison/: __init__.py  comparisons.py  hist_comparer.py
popmon/analysis/profiling/: __init__.py  hist_profiler.py  profiles.py  pull_calculator.py
popmon/base/: __init__.py  module.py  pipeline.py  registry.py
popmon/decorators/: __init__.py  pandas.py  spark.py
popmon/extensions/: __init__.py  extension.py  profile_diptest.py  utils.py
popmon/hist/: __init__.py  hist_splitter.py  hist_utils.py  histogram.py  patched_histogrammer.py
popmon/hist/filling/: __init__.py  histogram_filler_base.py  make_histograms.py  numpy_histogrammar.py  pandas_histogrammar.py  spark_histogrammar.py  utils.py
popmon/io/: __init__.py  file_reader.py  file_writer.py  json_reader.py
popmon/notebooks/: popmon_tutorial_advanced.ipynb  popmon_tutorial_basic.ipynb  popmon_tutorial_incremental_data.ipynb  popmon_tutorial_reports.ipynb
popmon/pipeline/: __init__.py  amazing_pipeline.py  dataset_splitter.py  metrics.py  metrics_pipelines.py  report.py  report_pipelines.py  timing.py
popmon/stats/: __init__.py  numpy.py
popmon/stitching/: __init__.py  hist_stitcher.py
popmon/test_data/: example.json  example_histogram.json  synthetic_histograms.json  test.csv
popmon/visualization/: __init__.py  alert_section_generator.py  backend.py  histogram_section.py  overview_section.py  report_generator.py  section_generator.py  traffic_light_section_generator.py  utils.py
popmon/visualization/templates/: aggregated-overview.html  card.html  core.html  footer.html  header.html  modal-popup.html  notebook_iframe.html  section.html  table.html
popmon/visualization/templates/assets/css/: custom-style.css
popmon/visualization/templates/assets/js/: custom-script.js  jquery.lazy.min.js
tests/popmon/: conftest.py  test_config.py  test_utils.py
tests/popmon/alerting/: test_apply_tl_bounds.py  test_compute_tl_bounds.py  test_integration.py
tests/popmon/analysis/: test_functions.py  test_hist_numpy.py  test_merge_statistics.py
tests/popmon/analysis/comparison/: test_comparisons.py  test_hist_comparer.py
tests/popmon/analysis/profiling/: test_apply_func.py  test_hist_profiler.py  test_profiles.py
tests/popmon/base/: test_module.py  test_pipeline.py  test_registry.py
tests/popmon/hist/: test_hist_splitter.py  test_histogram.py  test_numpy_histogrammar.py  test_numpy_istogrammar.py  test_pandas_histogrammar.py  test_spark_histogrammar.py
tests/popmon/hist/resource/: age.json  company.json  date.json  eyesColor.json  gender.json  isActive.json  isActive_age.json  latitude.json  latitude_longitude.json  longitude.json  transaction.json
tests/popmon/io/: test_file_reader.py  test_file_writer.py  test_json_reader.py
tests/popmon/notebooks/: test_notebooks.py
tests/popmon/pipeline/: test_metrics.py  test_report.py  test_report_pipelines.py  test_split_dataset.py
tests/popmon/spark/: test_spark.py  test_split_dataset_spark.py
tests/popmon/stats/: test_numpy.py
tests/popmon/stitching/: test_histogram_stitching.py
tests/popmon/visualization/: test_heatmaps.py  test_report_generator.py
tools/: pipeline_viz.py
tools/simulation/: custom-script.js  poster.html  style.css
